# tanchishe

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  build.rs
.github/workflows/: ci.yml
assets/fonts/: OFL.txt
docs/adr/: 0001-bevy-graphical-ecs-segments.md  0002-game-rules-controls-and-ui.md  0003-ci-release-windows-ubuntu.md  0004-hamiltonian-auto-play.md
src/: ai.rs  app.rs  audio.rs  food.rs  game.rs  grid.rs  high_score.rs  input.rs  lib.rs  main.rs  snake.rs  state.rs
tests/: integration.rs
